created chrome extension to unsubscribe all

--- a/index.html
+++ b/index.html
@@ -1,33 +1,22 @@
-<!-- popup.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>YouTube Unsubscriber</title>
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <!-- Custom CSS -->
+  <title>YouTube Auto Unsubscribe All</title>
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div class="container mt-3">
-        <div id="popup-container" class="text-center">
-          <button id="start" class="btn btn-outline-black btn-sm" running="false">Start process</button>
-        </div>
-        <div id="channels-list" class="my-3">
-          <!-- Demo List of YouTube Channels -->    
-          <!-- Add more channels as needed -->
-        </div>
-        <div id="unsubscribe-buttons" class="text-center">
-          <button id="unsubscribe-selected" class="btn btn-outline-primary btn-sm">Unsubscribe Selected</button>
-          <button id="unsubscribe-all" class="btn btn-outline-danger btn-sm">Unsubscribe All</button>
-        </div>
-      </div>
+  <header>
+    <div class="logo-container">
+      <span class="logo-text">YouTube Auto Unsubscribe All</span>
+      </a>
+    </div>
+  </header>
+  <button id="start" running="false">Start</button>
+  <footer>
+    <p>Buy me a coffee! <a href="https://www.buymeacoffee.com/arnabghosh" target="_blank">Click here</a></p>
 
-  
-  <!-- Custom JS -->
-  <script src="index.js"></script>
+  </footer>
+  <script src="./index.js"></script>
 </body>
 </html>
